--- a/static/assets/css/movie.css
+++ b/static/assets/css/movie.css
@@ -410,24 +410,38 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-    background: #1f2937;
+    background: #f15a22;
     color: white;
-    padding: 12px;
-    border-radius: 50%;
+    padding: 8px 14px;
+    border-radius: 10px 0px;
     cursor: pointer;
     z-index: 999;
-    transition: background 0.2s ease;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    transition: background 0.3s ease;
+    font-weight: 500;
+    font-size: 1rem;
 }
 
 #history-toggle:hover {
-    background: #374151;
+    background: #ad360b;
+}
+
+#history-toggle .material-symbols-outlined {
+    transition: transform 0.4s ease;
+}
+
+/* Quando estiver ativo (card visível), gira o ícone */
+#history-toggle.open .material-symbols-outlined {
+    transform: rotate(-180deg);
 }
 
 #history-card {
     position: fixed;
     bottom: 80px;
     right: 20px;
-    width: 300px;
+    width: 500px;
     background: rgba(15, 23, 42, 0.95);
     border: 1px solid rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
