--- a/static/view/home.html
+++ b/static/view/home.html
@@ -1,7 +1,4 @@
 <html>
-<head>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800&display=swap">
-</head>
 
 <body>
 
@@ -12,7 +9,8 @@
                     <div class="brand-title">RaaS Live Session</div>
                     <div class="powered-by">
                         <span>Powered by</span>
-                        <img src="./assets/images/user-logo.png" alt="Logo" class="user-logo">
+                        <img src="./assets/images/favicon.png" alt="Logo" class="user-logo"> 
+                    </img>
                     </div>
                 </div>
 
