--- a/static/view/home.html
+++ b/static/view/home.html
@@ -7,9 +7,9 @@
             <div class="header-top">
                 <div class="header-content"> 
                     <div class="brand-box">
-                        <p> RaaS Session-Based </p>
+                        <p> Real-Time Personalization Experience</p>
                         <span> Powered by 
-                            <img src="./assets/images/white-i6logo-full.png" alt="Infinity6 Logo"
+                            <img src="./assets/images/recsys-logo.png" alt="Recsys Logo"
                                 class="brand-logo">
                             </img>
                         </span>
