--- a/static/view/home.html
+++ b/static/view/home.html
@@ -16,14 +16,15 @@
                     </div>
                 </div>    
 
-                <div class="genres-btn-placeholder">
+                <div class="header-filtering">
+                    <form id="search-form" role="search">
+                        <input type="search" id="search-input" placeholder="Search for movies..."></input>
+                        <!-- <button type="submit">Search</button> -->
+                    </form>
+                    <div class="genres-btn-placeholder">
 
+                    </div>
                 </div>
-
-                <form id="search-form" role="search">
-                    <input type="search" id="search-input" placeholder="Search for movies..."></input>
-                    <button type="submit">Search</button>
-                </form>
             </div>
         </header>
 
