--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -26,6 +26,7 @@
     position: relative;
     width: 100%;
     margin-bottom: 16px;
+    background: rgba(255, 255, 255, .12);
 }
 /* 
 #search-form {
@@ -133,15 +134,9 @@
 }
 
 .genre-buttons {
-    background: rgba(255, 255, 255, 0.15);
-    padding: 10px;
-    border-radius: 25px;
     display: flex;
-    gap: 12px;
-    margin-bottom: 25px;
+    gap: 4px;
     flex-wrap: wrap;
-    margin: 0 0 25px 0;
-    padding: 0 5px;
 }
 
 .genre-btn {
