--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -6,7 +6,7 @@
     font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
     color: #ffffff;
     overflow-x: hidden;
-    
+
 }
 
 
@@ -28,6 +28,7 @@
     margin-bottom: 16px;
     background: rgba(255, 255, 255, .12);
 }
+
 /* 
 #search-form {
     font-size: 14px;
@@ -149,8 +150,8 @@
     font-weight: 500;
     cursor: pointer;
     transition: all 0.3s ease;
-    font-size: 14px;
-    width: 200px;
+    font-size: 12px;
+    width: 160px;
 }
 
 .genre-btn:hover {
@@ -162,8 +163,8 @@
 }
 
 .genre-btn[data-active="true"] {
-    background: linear-gradient(135deg, #f15a22, #f99d1c);
-    border-color: #f15a22;
+    background: linear-gradient(135deg, #001c37, #000000);
+    border-color: #001c37;
     color: #fff;
     box-shadow: 0 8px 25px rgba(241, 90, 34, 0.4);
     font-weight: 600;
@@ -305,6 +306,7 @@
     justify-content: space-between;
     margin-bottom: 30px;
 }
+
 /* gradient-main: linear-gradient(135deg, hsl(350 85% 60%) 0%, hsl(330 80% 55%) 25%, hsl(280 90% 60%) 50%, hsl(250 80% 50%) 75%, hsl(220 70% 40%) 100%); */
 .brand-box {
     margin: 25px;
@@ -337,4 +339,3 @@
     object-fit: contain;
     display: block;
 }
-
