--- a/static/assets/css/comp/layout.css
+++ b/static/assets/css/comp/layout.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../../images/dashbackground.png');
+    background-image: linear-gradient(rgba(20, 0, 180, 0.3), rgba(0, 0, 0, 0.2)), url('../../images/dashbackground.png');
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
