--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -76,9 +76,7 @@
 } */
 
 #search-input:focus {
-    border-color: #667eea;
-    box-shadow: 0 0 20px rgba(102, 126, 234, 0.3);
-    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 0 10px rgb(255, 255, 255);
 }
 
 
@@ -189,11 +187,16 @@
 
 /* Movie Grid */
 .movie-grid {
+    background:rgba(255, 255, 255, .12);
+    backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, .25);
+    box-shadow: 0  8px 32px -8px rgba(0, 0, 0, .2);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
     gap: 25px;
     margin-bottom: 60px;
     margin: 30px;
+    padding: 25px;
 }
 
 .movie-card {
