--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -208,6 +208,7 @@
     border: 1px solid rgba(255, 255, 255, 0.1);
     position: relative;
     cursor: pointer;
+    justify-content: start;
 }
 
 .movie-card:hover {
@@ -234,11 +235,9 @@
 }
 
 .movie-card div {
-    padding: 15px;
-    font-weight: 600;
-    font-size: 14px;
-    text-align: center;
-    line-height: 1.3;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.1;
 }
 
 /* Pagination */
