--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -235,9 +235,10 @@
 }
 
 .movie-card div {
+    padding: 10px 0px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.1;
+    line-height: 1.3;
 }
 
 /* Pagination */
