--- a/static/assets/css/home.css
+++ b/static/assets/css/home.css
@@ -201,21 +201,16 @@
 }
 
 .movie-card {
-    background: rgba(255, 255, 255, 0.05);
-    backdrop-filter: blur(20px);
-    border-radius: 20px;
     overflow: hidden;
     transition: all 0.3s ease;
-    border: 1px solid rgba(255, 255, 255, 0.1);
     position: relative;
     cursor: pointer;
     justify-content: start;
 }
 
 .movie-card:hover {
-    transform: translateY(-10px) scale(1.02);
-    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.4);
-    background: rgba(255, 255, 255, 0.08);
+    color: rgb(241, 50, 130);
+    background: rgba(255, 255, 255, 0.05);
 }
 
 .movie-card a {
@@ -225,6 +220,8 @@
 }
 
 .movie-card img {
+    border-radius: 0.75rem;
+
     width: 100%;
     height: 280px;
     object-fit: cover;
@@ -232,12 +229,12 @@
 }
 
 .movie-card:hover img {
-    transform: scale(1.05);
+    transform: scale(1.01);
 }
 
 .movie-card div {
-    padding: 10px 0px;
-    font-weight: 400;
+    padding: 8px 0px;
+    font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
 }
